testing mocks first attempt

--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,13 @@
     "ionic": "driftyco/ionic-bower#1.2.4",
     "ionic-platform-web-client": "~0.2.1",
     "cordova": "~3.4.0",
-    "plugin": "^3.1.0"
+    "plugin": "^3.1.0",
+    "angular-mocks": "^1.5.0"
   },
   "dependencies": {
     "angular-logex": "^0.0.10"
+  },
+  "resolutions": {
+    "angular": "1.5.0"
   }
 }
